# substrate-advance-8-homework

./: .gitignore  README.md
homework-1/22/: README.md
homework-1/22/runtime/: Cargo.toml
homework-1/605/: README.md
homework-1/606/: test.rs
homework-1/610/: Cargo.toml
homework-1/610/runtime/: Cargo.toml
homework-1/615/: tests.rs
homework-1/616/: readme.md  tests.rs
homework-1/618/: .gitignore
homework-1/629/: README.md
homework-1/629/runtime/: Cargo.toml
homework-1/640/: test.rs
homework-1/641/polkadot-sdk-solochain/: Cargo.toml
homework-1/650/: test.rs
homework-1/652/poe/: Cargo.toml  README.md
homework-1/654/: Cargo.toml  README.md
homework-1/662/: tests.rs
homework-1/669/poe/: README.md
homework-1/672/: tests.rs
homework-1/677/: README.md
homework-1/682/: README.md  tests.rs
homework-1/689/: Cargo.toml
homework-1/82/: tests.rs
homework-2/: readme.md
homework-2/22/: README.md
homework-2/22/runtime/: Cargo.toml
homework-2/597/poe/: Cargo.toml
homework-2/605/: README.md
homework-2/610/: README.md
homework-2/610/runtime/: Cargo.toml
homework-2/613/poe/: Cargo.toml
homework-2/626/polkadot-sdk-solochain-template/: Cargo.toml
homework-2/629/: Cargo.toml  README.md
homework-2/629/runtime/: Cargo.toml
homework-2/640/: benchmarking.rs  lib.rs  weights.rs
homework-2/641/polkadot-sdk-solochain-template/: Cargo.toml
homework-2/652/poe/: Cargo.toml  README.md
homework-2/654/: README.md
homework-2/654/polkadot-sdk-solo-template-dev-courses/: Cargo.toml
homework-2/655/poe/: README.md
homework-2/658/poe/: Cargo.toml
homework-2/658/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
homework-2/669/poe/: Cargo.toml  README.md
homework-2/672/poe/: Cargo.toml
homework-2/672/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
homework-2/676/: Cargo.toml  README.md
homework-2/676/src/: lib.rs
homework-2/677/: Cargo.toml  README.md
homework-2/677/runtime/: Cargo.toml
homework-2/693/poe/: Cargo.toml
homework-2/82/: benchmarking.rs  lib.rs  weights.rs
homework-3/: readme.md
homework-3/597/: ._lesson-3
homework-3/597/lesson-3/: .gitignore
homework-3/613/runtime/: Cargo.toml
homework-3/626/runtime/: Cargo.toml
homework-3/654/: README.md
homework-3/654/polkadot-sdk-solo-template-dev-courses/: Cargo.toml
homework-3/658/runtime/: Cargo.toml
homework-3/677/: README.md
homework-3/689/node/: Cargo.toml
homework-3/689/runtime/: Cargo.toml
homework-4/: readme.md
homework-4/22/: README.md
homework-4/22/runtime/: Cargo.toml
homework-4/626/: Cargo.toml
homework-4/626/runtime/: Cargo.toml
homework-4/640/runtime/: Cargo.toml
homework-4/658/: .gitignore
homework-4/677/: README.md
homework-4/689/: Cargo.toml
homework-5/: readme.md
homework-5/22/: Cargo.toml  README.md  zombienet.toml
homework-5/655/: .gitignore
homework-5/658/: zombienet.toml
homework-5/677/: README.md  run-zombienet.sh  zombienet.toml
homework-5/689/: Cargo.toml  run-zombienet.sh
homework-6/: readme.md
(+354 files in other folders)
