[package]
name = 'pallet-poe'
version = '1.0.0'
description = 'FRAME proof of existence pallet'
authors = ['Kaichao Sun <kaichaosuna@gmail.com>']
homepage = 'https://whisperd.tech'
edition = '2021'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/play-substrate/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { features = [
    "derive",
], workspace = true }
scale-info = { features = [
    "derive",
], workspace = true }

sp-std.workspace = true

frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

