[package]
name = "poe"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.10.0" }

sp-std = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.10.0" }

frame-support = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.10.0" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.10.0" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", optional = true }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.10.0" }
sp-io = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.10.0" }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.10.0" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-std/std',
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks", 
    "sp-runtime/runtime-benchmarks",
]
try-runtime = ['frame-support/try-runtime']

[lints]
workspace = true
